Re-organized CSS

--- a/page3/index.html
+++ b/page3/index.html
@@ -98,7 +98,7 @@
     <div class="mobile-nav contact-overlay">
         <div class="contact-container">
 
-            <div class="hero-text-container">
+            <div class="hero-text-container-co">
                 <h1>BOOK YOUR</h1>
                 <h1>CONSULTATION</h1>
 
