--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <div class="wrapper desktop-nav">
 
-          <a href="../index.html" class="logo floatleft"></a>
+          <a href="./index.html" class="logo floatleft"></a>
 
           <ul>
               <li><a href="./page1/index.html">ABOUT AVIX</a></li>
@@ -32,7 +32,7 @@
 <!-- HEADER, MOBILE NAVIGATION -->
 		  <div class="wrapper mobile-nav">
 
-	  		  <a href="../index.html" class="logo floatleft"></a>
+	  		  <a href="./index.html" class="logo floatleft"></a>
 
     		  <nav role='navigation'>
   			      <div class="menu-toggle">
