--- a/page1/index.html
+++ b/page1/index.html
@@ -8,7 +8,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/styles.css">
 
-        <title>Welcome to AVIX</title>
+        <title>About AVIX</title>
 
   </head>
 
@@ -83,21 +83,21 @@
         <div class="team-container">
             <div class="team-card">
                   <h3>Jason Fernandes</h3>
-                  <img class="image-circle" src="../img/blue.jpg">
+                  <img class="image-circle" src="../img/sil1.jpg">
                   <h4>Founder and CEO</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div class="team-card">
-             	    <h3>James Furgeson</h3>
-                  <img class="image-circle" src="../img/jet.gif">
+             	    <h3>Erika Langdon</h3>
+                  <img class="image-circle" src="../img/sil2.jpg">
                   <h4>CMO</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div class="team-card">
              	    <h3>Sam Amante</h3>
-                  <img class="image-circle" src="../img/jet.gif">
+                  <img class="image-circle" src="../img/sil3.jpg">
                   <h4>CSO</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
@@ -112,21 +112,21 @@
         <div class="team-container">
             <div class= "team-card">
                   <h3>Jason Fernandes</h3>
-                  <img class="team-image-circle" src="../img/blue.jpg">
+                  <img class="team-image-circle" src="../img/sil1.jpg">
                   <h4>Founder and CEO</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div class= "team-card">
                   <h3>James Furgeson</h3>
-                  <img class="team-image-circle" src="../img/jet.gif">
+                  <img class="team-image-circle" src="../img/sil2.jpg">
                   <h4>CMO</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div class= "team-card">
                  <h3>Sam Amante</h3>
-                 <img class="team-image-circle" src="../img/jet.gif">
+                 <img class="team-image-circle" src="../img/sil3.jpg">
                  <h4>CSO</h4>
                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
