--- a/page2/index.html
+++ b/page2/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-        <title>Fly With AVIX</title>
+        <title>Products</title>
 
     </head>
 
@@ -64,7 +64,7 @@
     <div class= "product-int-container">
 
         <div class="history-text-container">
-            <h3 class="aligncenter">Select from a wide range of classes and options below using our configurator</h3>
+            <h3 class="aligncenter">Three distinct choices to compliment your lifestyle</h3>
         </div>
 
     </div>
@@ -76,27 +76,27 @@
         <div class="product-container">
 
             <div class="product-text-container">
-                <h2 class="aligncenter">Air Yachts</h2>
+                <h2 class="aligncenter">Air Crafts</h2>
             </div>
 
           	<div class="product-text-container-l">
                 <div>
 
           		      <div class="product-card">
-                        <img class="float-left image-circle" src="../img/jet.gif">
-                        <h3>DESIGN</h3>
+                        <img class="float-left image-circle" src="../img/ship.jpg">
+                        <h3>Air Yacht</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
              	      </div>
 
                     <div class="product-card">
-                        <img class="float-left image-circle" src="../img/jet.gif">
-                        <h3>DESIGN</h3>
+                        <img class="float-left image-circle" src="../img/jet.jpg">
+                        <h3>Private Jet</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             	      </div>
 
                     <div class="product-card">
-                        <img class="float-left image-circle" src="../img/jet.gif">
-                        <h3>DESIGN</h3>
+                        <img class="float-left image-circle" src="../img/personalp.jpg">
+                        <h3>Personal Flyer</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
 
@@ -112,26 +112,26 @@
         <div class="product-container">
 
             <div class="product-text-container">
-                <h2>Air Yachts</h2>
+                <h2>Air Crafts</h2>
             </div>
 
             <div>
 
                 <div class="product-card">
-                    <img class="image-circle" src="../img/blue.jpg">
-                    <h3>DESIGN</h3>
+                    <img class="image-circle" src="../img/ship.jpg">
+                    <h3>Air Yacht</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
 
                 <div class="product-card">
-                    <img class="image-circle" src="../img/blue.jpg">
-                    <h3>DESIGN</h3>
+                    <img class="image-circle" src="../img/jet.jpg">
+                    <h3>Private Jet</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
 
                 <div class="product-card">
-                    <img class="image-circle" src="../img/blue.jpg">
-                    <h3>DESIGN</h3>
+                    <img class="image-circle" src="../img/personalp.jpg">
+                    <h3>Personal Flyer</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
 
